--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
-    <string name="app_name">Popular Photos</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Instagram Photo Viewer</string>
     <string name="action_settings">Settings</string>
 </resources>
