--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Instagram Photo Viewer</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_comments">CommentsActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
